replace use of Map.of